--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         // JavaScript for generating Matrix-like text goes here
         function createMatrixText() {
             const textContainer = document.querySelector(".matrix-text");
-            const text = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+            const text = "01¾½¼≈÷¶░▒▓■";
             const speed = 50; // Adjust the speed as needed
 
             setInterval(function () {
