--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="matrix-container">
         <div class="matrix-text"> <!-- Add more lines like this to create the Matrix rain effect -->
-            // Your Matrix-like text here
+            01¾½¼≈÷¶░▒▓■
         </div>
     </div>
 
