--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         function createMatrixText() {
             const matrixContainer = document.getElementById("matrix-container");
             const text = "01¾½¼≈÷¶░▒▓■";
-            const numSymbols = 150; // Increase the number of symbols
-            const speed = 500; // Symbol creation interval in milliseconds
+            const numSymbols = 150;
+            const speed = 500;
 
             setInterval(function () {
                 for (let i = 0; i < numSymbols; i++) {
@@ -59,9 +59,9 @@
                     const newTextElement = document.createElement("div");
                     newTextElement.textContent = randomCharacter;
                     newTextElement.className = "matrix-text";
-                    newTextElement.style.left = Math.floor(Math.random() * 100) + "vw"; // Random horizontal position
-                    newTextElement.style.animationDuration = (Math.random() * 3 + 2) + "s"; // Random fade duration
-                    newTextElement.style.opacity = 0; // Start with 0 opacity
+                    newTextElement.style.left = Math.floor(Math.random() * 100) + "vw";
+                    newTextElement.style.animationDuration = (Math.random() * 3 + 2) + "s";
+                    newTextElement.style.opacity = 0;
 
                     matrixContainer.appendChild(newTextElement);
 
